--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "actions-setup-docker-compose",
+  "name": "@kengotoda/actions-setup-docker-compose",
   "version": "0.0.0",
   "description": "the GitHub Action setting up docker-compose command",
   "main": "lib/main.js",
