--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Read .nvmrc
         run: echo ::set-output name=NVMRC::$(cat .nvmrc)
         id: nvm
-      - uses: actions/setup-node@ve
+      - uses: actions/setup-node@v2
         with:
           cache: npm
           node-version: ${{ steps.nvm.outputs.NVMRC }}
