ci: try to push a commit by semantic-release
https://github.com/semantic-release/git/issues/196#issuecomment-702901192

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,6 +11,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+        with:
+          # Make sure the release step uses its own credentials.
+          persist-credentials: false
       - name: Read .nvmrc
         run: echo ::set-output name=NVMRC::$(cat .nvmrc)
         id: nvm
