--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.0.0",
   "description": "the GitHub Action setting up docker-compose command",
   "main": "lib/main.js",
-  "private": "false",
+  "private": false,
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "build": "tsc",
     "format": "prettier --write **/*.ts",
