--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,6 +40,7 @@ jobs:
       - uses: ./
         with:
           version: 'v2.4.1'
+      - uses: ./
   actionlint:
     runs-on: ubuntu-latest
     if: github.event.pull_request
