--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.2.2",
   "description": "the GitHub Action setting up docker-compose command",
   "main": "lib/main.js",
+  "type": "module",
   "private": false,
   "publishConfig": {
     "access": "public"
